# Chess-Engine-Rust

./: .dockerignore  .gitignore  Cargo.toml  Developer_guide.md  Dockerfile  README.md  run-docker.sh  run.sh
.github/workflow/: rust-ci.yml
.github/workflows/: rust-ci.yml
examples/chess-gui/: Cargo.toml
examples/chess-gui/src/: lib.rs
examples/chess-gui/src/bins/: best.rs
examples/gui/: Cargo.toml
examples/gui/src/: lib.rs
src/: README.md  board.rs  main.rs
terminal/chess-gui/: Cargo.toml
terminal/chess-gui/src/: lib.rs
