[workspace]
members = [
    "examples/chess-gui",
]

[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["chess", "engine", "game", "board", "ai"]
categories = [
    "games",
    "no-std",
    "game-engines",
    "game-development",
    "algorithms"
]

[[bin]]
name = "chess"
path = "src/bin.rs"

[[example]]
name = "terminal"