[package]
name = "chess-gui"
version = "0.1.0"
authors = ["Utkarsh Maurya <projects.utkarshMaurya@gmail.com>"]
edition = "2021"

[[bin]]
name = "best"
path = "src/bins/best.rs"

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
rand = "0.8"
lazy_static = "1.4"
chess-engine = { path = "../..", version = "0.1.0" }