[package]
name = "chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "best"
path = "src/bins/best.rs"

[[bin]]
name = "random"
path = "src/bins/random.rs"


[dependencies]
iced = "0.2"
rand = "0.8"
lazy_static = "1.4"
chess-engine = { path = "../.." }
